--- a/code/02_虚拟DOM的2种创建方式/1_使用jsx创建虚拟DOM.html
+++ b/code/02_虚拟DOM的2种创建方式/1_使用jsx创建虚拟DOM.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>1_使用jsx创建虚拟DOM</title>
 </head>
 <body>
 <!--准备好一个"容器""-->
@@ -22,7 +22,7 @@
     * 此处一定要写babel
     * */
     // 1. 创建虚拟Dom
-    const VDOM = <h1>Hello,React</h1>;   // 此处一定不要写引号,因为不是字符串
+    const VDOM = <h1 id="title">Hello,React</h1>;   // 此处一定不要写引号,因为不是字符串
     // 这里不用加单引号,因为他是jsx
     // jS 和JSx 差不多
     // 2. 渲染虚拟DOM到页面
