--- a/code/02_虚拟DOM的2种创建方式/2_使用js创建虚拟DOM.html
+++ b/code/02_虚拟DOM的2种创建方式/2_使用js创建虚拟DOM.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>2_使用js创建虚拟DOM.html</title>
 </head>
 <body>
 <!--准备好一个"容器""-->
@@ -16,17 +16,10 @@
 <script type="text/javascript" src="../js/react-dom.development.js"></script>
 <!--引入babel,用于将jsx转为js-->
 <script type="text/javascript" src="../js/babel.min.js"></script>
-<!--babel,表示是jsx-->
-<script type="text/babel">
-    /*
-    * 此处一定要写babel
-    * */
+<script type="text/javascript">
     // 1. 创建虚拟Dom
-    const VDOM = <h1>Hello,React</h1>;   // 此处一定不要写引号,因为不是字符串
-    // 这里不用加单引号,因为他是jsx
-    // jS 和JSx 差不多
+    // const VDOM = React.createElement(标签名,标签属性,标签内容)
     // 2. 渲染虚拟DOM到页面
-    // ReactDOM.render(虚拟Dom,容器)
     ReactDOM.render(VDOM, document.getElementById('test')); // 这个地方你不服
 </script>
 
