--- a/code/02_虚拟DOM的2种创建方式/1_使用jsx创建虚拟DOM.html
+++ b/code/02_虚拟DOM的2种创建方式/1_使用jsx创建虚拟DOM.html
@@ -22,7 +22,11 @@
     * 此处一定要写babel
     * */
     // 1. 创建虚拟Dom
-    const VDOM = <h1 id="title">Hello,React</h1>;   // 此处一定不要写引号,因为不是字符串
+    const VDOM = (// 此处一定不要写引号,因为不是字符串
+        <h1 id="title">
+            <span>Hello,React</span>    
+        </h1>
+    )   
     // 这里不用加单引号,因为他是jsx
     // jS 和JSx 差不多
     // 2. 渲染虚拟DOM到页面
