--- a/code/03_jsx语法规则/jsx语法规则.html
+++ b/code/03_jsx语法规则/jsx语法规则.html
@@ -29,12 +29,24 @@
     /*
     * 此处一定要写babel
     * */
-    // 1. 创建虚拟Dom
-    const VDOM = (// 此处一定不要写引号,因为不是字符串
-        <h2 class='title' id={myId.toLowerCase()}>
-            <span style={{color:'white' ,fontSize:'40px'}}>{myData.toLowerCase()}</span>
-        </h2>
-    )   
+    // 1. 创建虚拟Dom// 此处一定不要写引号,因为不是字符串
+    const VDOM = (
+        <div>
+            <h2 class='title' id={myId.toLowerCase()}>
+                <span style={{color:'white' ,fontSize:'40px'}}>{myData.toLowerCase()}</span>
+            </h2>
+            <h2 class='title' id={myId.toUpperCase()}>
+                <span style={{color:'white' ,fontSize:'40px'}}>{myData.toLowerCase()}</span>
+            </h2>
+            <input type="text"/>
+            <good>22268</good>
+            <Good>22268</Good>
+
+        </div>
+    )
+    /*react-dom.development.js:500 Warning: The tag <good> is unrecognized in this browser. If you meant to render a React component, start its name with an uppercase letter.
+    in good
+    in div*/
     // 2. 渲染虚拟DOM到页面
     ReactDOM.render(VDOM, document.getElementById('test')); // 这个地方你不服
     /*
@@ -43,7 +55,12 @@
     *   2. 标签中混入js表达式时,用{}
     *   3. 样式的类名指定,不要用class,要用className.
     *   4. 内联样式,要用style={{key:'value',}}的形式写
-    *   5. 根标签只能有一个
+    *   5. 虚拟DOM,根标签只能有一个
+    *   6. 标签必须闭合
+    *   7. 标签首字母
+    *       1. 若小写字母开头,则将该标签转为html中同名元素,若Html中该标签对应的无同名元素,则报错
+    *       2. 若大写字母开头,React就去渲染对应的组件,若组件没有定义,则报错
+    *
     * */
 </script>
 
