--- a/code/05_react中定义组件/1_函数式组件.html
+++ b/code/05_react中定义组件/1_函数式组件.html
@@ -22,12 +22,19 @@
     // 1.创建函数式组件
     // 循序渐进, 先写个函数
     // 组件:包含页面局部功能全部代码和资源的集合
-    function Demo() {
-        //
+    function MyComponent() {
+        console.log(this);  // this 是 undefend
+        // babel翻译完之后 开启严格模式
+        // 严格模式 : 禁止this指向
         return <h2>我是用函数定义的组件(使用与简单组件的定义)</h2>
     }
     // 渲染组件到页面
-    ReactDOM.render(<Demo/>,document.getElementById('test'))
+    ReactDOM.render(<MyComponent/>,document.getElementById('test'))
+    /*
+    * 执行了ReactDOM.render(<MyComponent/>...之后?发生了什么?
+    *   1. React解析组件标签,找到了MyComponent组件.
+    *   2. 发现组件是使用函数定义的,随后调用该函数,将返回的虚拟DOM转为真实DOM,随后呈现在页面中
+    * */
 
 </script>
 
