类的基本知识

--- a/code/review/1_类的基本知识.html
+++ b/code/review/1_类的基本知识.html
@@ -1,12 +1,3 @@
-#  10_复习类相关知识
-
-本来应该直接学类式组件的 
-
-但是考虑你类都忘了
-
-
-
-```html
 <!doctype html>
 <html lang="en">
 <head>
@@ -37,10 +28,11 @@
             // (原型链的查找规则()
             // 当你调用了属性不存在的属性,后者不存在的方法
             // 那就要沿着原型链来查找,找下去
-            
+
             // 思考2
             // this 是谁, 通过person 实例,调用speak时候,
             // speak中的this就是person实例本身
+            // 这也不一定,call()方法有一个功能就是更改函数中的this指向,你传谁,就改成谁
         }
 
     }
@@ -58,13 +50,9 @@
 
     p1.speak()
     p2.speak()
+    p1.speak.call({a:1,b:2})
+    // 这样就要看是函数是怎么调用的
+
 </script>
 </body>
 </html>
-```
-
-
-
-![image-20210309134516515](img/image-20210309134516515.png)
-
-![image-20210309134819795](img/image-20210309134819795.png)
