--- a/code/review/1_类的基本知识.html
+++ b/code/review/1_类的基本知识.html
@@ -9,11 +9,16 @@
 </head>
 <body>
 <script type="application/javascript">
-    // 你看白雪人间,你看冰川璀璨
+    /*
+    * 总结:
+    *   1. 类中的构造器不是必须写的,要对实例进行一些初始化的操作,如添加指定属性时才写.
+    *   2. 如果A继承了B类,且A类中写了构造器,那么A类构造器中的super是必须要调用的
+    *   3. 类中定义的方法其实是放在了,都是放在了,类的原型对象上,供 实例去实例使用
+    * */
     // 创建一个Person类
     class Person {
         // 构造方法 构造器
-        constructor(name,age) {
+        constructor(name, age) {
             // this是类的实例对象
             this.name = name;
             this.age = age;
@@ -22,37 +27,48 @@
         // 一般方法(处理 构造方法 都是一般方法
         speak() {
             // es6里面的模板语法
-            console.log(`我叫${this.name},我的年龄是${this.age}`)
-            // 思考1
-            // speak方法放在 了哪里? - 类的原型对象 供实例使
-            // (原型链的查找规则()
-            // 当你调用了属性不存在的属性,后者不存在的方法
-            // 那就要沿着原型链来查找,找下去
+            console.log(`我叫${this.name},我的年龄是${this.age}`);
 
-            // 思考2
-            // this 是谁, 通过person 实例,调用speak时候,
-            // speak中的this就是person实例本身
-            // 这也不一定,call()方法有一个功能就是更改函数中的this指向,你传谁,就改成谁
         }
 
     }
 
-    class Dog{}
+    // 创建一个Student类,继承与Person类
+    class Student extends Person {
+
+        // 对于学生来说,我就可以不写构造器
+        constructor(name, age, grade) {
+            // 这里必须调用爸爸,超累
+            super();    // super必须要之前调用
+            this.grade = grade;
+        }
+        // 一般方法(处理 构造方法 都是一般方法
+        speak() {
+            // es6里面的模板语法
+            console.log(`我叫${this.name},我的年龄是${this.age},我的年纪是${this.grade}`)
+
+        }
+    }
 
     // 创建一个Person的实例对象
-    const p1 = new Person('tom', 18);
-    const p2 = new Person('jerry', 19);
+    const s1 = new Student('小张', 16,'高一');
+    console.log(s1);
+    /*
+    Student {name: undefined, age: undefined, grade: "高一"}
+    age: undefined
+    grade: "高一"
+    name: undefined
+    __proto__: Person
+    * */
+    s1.speak()
 
-    // 控制台输出的是实例,但是前面标记了一下这个实例时由谁来产生的
+    const p1 = new Person("是", 45);
+    const p2 = new Person("贝壳多", 25);
     console.log(p1)
     console.log(p2)
-
-
     p1.speak()
     p2.speak()
-    p1.speak.call({a:1,b:2})
-    // 这样就要看是函数是怎么调用的
-
+    console.log("vicotsr")
 </script>
 </body>
 </html>
