--- a/code/05_react中定义组件/1_函数式组件.html
+++ b/code/05_react中定义组件/1_函数式组件.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>jsx小练习.html</title>
+    <title>1_函数式组件.html.html</title>
 
 </head>
 <body>
