--- a/code/06_组件实例三大属性1_state/06_组件实例三大属性1_state.html
+++ b/code/06_组件实例三大属性1_state/06_组件实例三大属性1_state.html
@@ -6,36 +6,48 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>06_组件实例三大属性1_state.html.html.html</title>
+    <!--引入 react 核心库-->
 
+    <script type="text/javascript" src="../js/react.development.js"></script>
+    <!--引入 react-dom ,用于支持react 操作Dom-->
+    <script type="text/javascript" src="../js/react-dom.development.js"></script>
+    <!--引入babel,用于将jsx转为js-->
+    <script type="text/javascript" src="../js/babel.min.js"></script>
 </head>
 <body>
 <!--准备好一个"容器""-->
 <div id="test"></div>
-<!--引入 react 核心库-->
-<script type="text/javascript" src="../js/react.development.js"></script>
-<!--引入 react-dom ,用于支持react 操作Dom-->
-<script type="text/javascript" src="../js/react-dom.development.js"></script>
-<!--引入babel,用于将jsx转为js-->
-<script type="text/javascript" src="../js/babel.min.js"></script>
+<!--
+react 中 他重新封装了这些事件, 他
+-->
+<button></button>
 <!--babel,表示是jsx-->
 <script type="text/babel">
     // 1. 创建组件
-    class Weather extends React.Component{
+    class Weather extends React.Component {
         constructor(props) {
             super(props);
             // 初始化状态
-            this.state = {isHot:false}
+            this.state = {isHot: false}
         }
+
         render() {
             console.log(this);
             // 读取状态
             const {isHot} = this.state.isHot
-            return <h1>今天天气很{isHot ? '炎热' : '凉爽'}</h1>
+            return <h1 onClick={demo}>今天天气很{isHot ? '炎热' : '凉爽'}</h1>
+            //onClick 要大写的C
+        //    这里demo不能写括号
         }
     }
 
     // 2.  渲染 组件到页面
     ReactDOM.render(<Weather/>, document.getElementById('test'));
+
+    // document 这里你就尽量只是在这里写一次 document
+    function demo() {
+        alert("点了");
+    }
 
     // idea 运行 React ,alt+F2
 </script>
