--- a/code/06_组件实例三大属性1_state/06_组件实例三大属性1_state.html
+++ b/code/06_组件实例三大属性1_state/06_组件实例三大属性1_state.html
@@ -43,8 +43,8 @@ react 中 他重新封装了这些事件, 他
         // document 这里你就尽量只是在这里写一次 document
         changeWeather() {
             // changeWeather 放在哪里? - weather房子啊了原型上
-            // 通过Weather 实例调用changeWeather时,changeWeather中的this就是Weather实例
-            console.log(666);
+            // 通过Weather 实例调用changeWeather时,changeWeather中的this就是Weather
+            // // 实例 changeWeather
             console.log(this);  // 报错
             // this.state.isHot = ~this.state.isHot;
         }
