--- a/code/06_组件实例三大属性1_state/06_组件实例三大属性1_state.html
+++ b/code/06_组件实例三大属性1_state/06_组件实例三大属性1_state.html
@@ -41,7 +41,7 @@ react 中 他重新封装了这些事件, 他
         render() {
             console.log(this);
             // 读取状态
-            const {isHot} = this.state.isHot
+            const {isHot} = this.state
             return <h1 onClick={this.demo}>今天天气很{isHot ? '炎热' : '凉爽'}</h1>
             // 这里调用的是自身上的changeWeather,而不是原型上的changeWeather
             // this.changeWeather = this.changeWeather.bind(this)
@@ -51,7 +51,14 @@ react 中 他重新封装了这些事件, 他
 
         changeWeather() {
             console.log(this);  // 报错
-
+            // 获取原来的isHot值
+            const isHot = this.state.isHot
+            // 严重注意: 状态(state)不可直接更改,下面这行就是直接更改!!!
+            // this.state.isHot = !isHot|;   // 这是错误的写法
+            // 严重注意!   : 状态必须使用 setState 来修改
+            this.setState({isHot:!isHot});   // 这是错误的写法
+            console.log(this.state.isHot);
+            // 这里面改成了,布尔值已经完成切换了
         }
     }
 
