--- a/code/06_组件实例三大属性1_state/06_组件实例三大属性1_state.html
+++ b/code/06_组件实例三大属性1_state/06_组件实例三大属性1_state.html
@@ -28,7 +28,7 @@ react 中 他重新封装了这些事件, 他
         constructor(props) {
             super(props);
             // 初始化状态
-            this.state = {isHot: false}
+            this.state = {isHot: false, wind: '威风'}
             this.changeWeather = this.changeWeather.bind(this)
             // 可以获取到了
             // this.changeWeather 可以通过原型找到他
@@ -41,8 +41,8 @@ react 中 他重新封装了这些事件, 他
         render() {
             console.log(this);
             // 读取状态
-            const {isHot} = this.state
-            return <h1 onClick={this.demo}>今天天气很{isHot ? '炎热' : '凉爽'}</h1>
+            const {isHot,wind} = this.state
+            return <h1 onClick={this.demo}>今天天气很{isHot ? '炎热' : '凉爽'},{wind}</h1>
             // 这里调用的是自身上的changeWeather,而不是原型上的changeWeather
             // this.changeWeather = this.changeWeather.bind(this)
             // 吧原型上的函数 挂在了 本实例 中的属性上
@@ -56,9 +56,8 @@ react 中 他重新封装了这些事件, 他
             // 严重注意: 状态(state)不可直接更改,下面这行就是直接更改!!!
             // this.state.isHot = !isHot|;   // 这是错误的写法
             // 严重注意!   : 状态必须使用 setState 来修改
-            this.setState({isHot:!isHot});   // 这是错误的写法
-            console.log(this.state.isHot);
-            // 这里面改成了,布尔值已经完成切换了
+            this.setState({isHot: !isHot});   // 这是错误的写法
+            // 这里面是只是改变了isHot ,还是吧wind 替换没了
         }
     }
 
