--- a/code/review/1_类的基本知识.html
+++ b/code/review/1_类的基本知识.html
@@ -50,25 +50,22 @@
         }
     }
 
-    // 创建一个Person的实例对象
-    const s1 = new Student('小张', 16,'高一');
-    console.log(s1);
-    /*
-    Student {name: undefined, age: undefined, grade: "高一"}
-    age: undefined
-    grade: "高一"
-    name: undefined
-    __proto__: Person
-    * */
-    s1.speak()
+    class Car{
+        constructor(name,price) {
+            this.name = name;
+            this.price = price;
+            this.wheel = 4;
+        }
 
-    const p1 = new Person("是", 45);
-    const p2 = new Person("贝壳多", 25);
-    console.log(p1)
-    console.log(p2)
-    p1.speak()
-    p2.speak()
-    console.log("vicotsr")
+        // 类 中可以直接写复制语句
+        a = 1;
+        // 上述dia代码的含义是: 给Car的实例对象添加一个属性,名为a,值为1
+    }
+
+    const c1 = new Car("奔驰c63",199);
+    const c2 = new Car("奔驰c63",299);
+    console.log(c1);
+    console.log(c2);
 </script>
 </body>
 </html>
