对 props 进行限制

--- a/code/07_组件实例三大属性2_props/1_props基本使用.html
+++ b/code/07_组件实例三大属性2_props/1_props基本使用.html
@@ -37,7 +37,7 @@ react 中 他重新封装了这些事件, 他
                 <ul>
                     <li>姓名: {name}</li>
                     <li>姓别: {sex}</li>
-                    <li>年龄: {age}</li>
+                    <li>年龄: {age+1}</li>
                 </ul>
             )
         }
