24 props 和 构造器 over

--- a/code/review/1_类的基本知识.html
+++ b/code/review/1_类的基本知识.html
@@ -59,13 +59,14 @@
 
         // 类 中可以直接写复制语句
         a = 1;
+        wheel = 4
+        static demo = 100
         // 上述dia代码的含义是: 给Car的实例对象添加一个属性,名为a,值为1
     }
 
-    const c1 = new Car("奔驰c63",199);
-    const c2 = new Car("奔驰c63",299);
+    const c1 = new Car("BMW M4", 199);
     console.log(c1);
-    console.log(c2);
+    console.log(Car.demo);
 </script>
 </body>
 </html>
