--- a/code/07_组件实例三大属性2_props/4_构造器和props.html
+++ b/code/07_组件实例三大属性2_props/4_构造器和props.html
@@ -21,16 +21,42 @@
 <div id="test1"></div>
 <div id="test2"></div>
 <div id="test3"></div>
-
 <!--
 react 中 他重新封装了这些事件, 他
 -->
 <button></button>
 <!--babel,表示是jsx-->
 <script type="text/babel">
-    // 创建组件
+    // TODO 创建组件
     class Person extends React.Component {
         state = {name: 'tom', age: "18", sex: "女"}
+
+        constructor(props) {
+            // 构造器 是否接受props,石佛语传递给super,取决于:
+            // 1. 是否希望在构造器中通过this访问props
+            // 但是这种情况及其少见
+            super(props);
+            // ??? 这个地方我传递给super()props属性
+            // 构造器科协可不写
+            console.log('constructor', this.props)
+            // 如果我需要用this.props 也可以 直接props
+            // props 有被传进来的,
+
+
+        }
+
+        // TODO 对标签属性进行类型,必要性的限制
+        static prototypes = {
+            name: PropTypes.string.isRequired,    // 字符串 必须传
+            sex: PropTypes.string,// 限制rex没说必传
+            age: PropTypes.number,// 限制 age为数值
+            speak: PropTypes.func,// 限制speak为函数
+        }
+        // TODO 指定默认标签属性值
+        static defaultProps = {
+            sex: '男', // sex默认值为难
+            age: 18  // 年龄 默认为18
+        }
 
         render() {
             const {name, age, sex} = this.props
@@ -46,37 +72,12 @@ react 中 他重新封装了这些事件, 他
             )
             // <li>年龄: {age + 1}</li> 这个不算修改,只是一个运算,只有读的过程
         }
-    }
-    // Person.属性规则 = {
-    //     name: '必传, 字符串'
-    // }
-    // 这个属性的名字不能改
-    // 创建的时候 找这个属性,要是有就帮你限制
-    // TODO 对标签属性进行类型,必要性的限制
-    Person.prototypes = {
-        // PropTypes 大写的是一个React 的属性
-        // 注意这个string 开头是小写的
-        // 在React 15.xxx 有
-        // 在React 16 之后就被弃用了
-        // name:React.PropTypes.string
-        // React 有点臃肿 这么整
-        name: PropTypes.string.isRequired,    // 字符串 必须传
-        sex: PropTypes.string,// 限制rex没说必传
-        age: PropTypes.number,// 限制 age为数值
-        speak:PropTypes.func,// 限制speak为函数
-    }
-    // 指定默认标签属性值
-    Person.defaultProps = {
-        sex:'男', // sex默认值为难
-        age:18  // 年龄 默认为18
-    }
-    ReactDOM.render(<Person name="jerry" age={19} sex="男"/>, document.getElementById('test1'))
-    ReactDOM.render(<Person name="tom" age={17} sex="女"/>, document.getElementById('test2'))
-    ReactDOM.render(<Person {...p}/>, document.getElementById('test3'))
 
-    const p = {name: 'nancy', age: 18, sex: '女'}
-    // 渲染组件到页面
-    ReactDOM.render(<Person {...p}/>, document.getElementById('test3'))
+    }
+
+
+    // TODO 渲染组件到页面
+    ReactDOM.render(<Person name="jerry" age={19} sex="男"/>, document.getElementById('test1'))
 </script>
 
 
