--- a/code/08_组件实例三大属性3_refs/3_回调ref中回调执行次数的问题.html
+++ b/code/08_组件实例三大属性3_refs/3_回调ref中回调执行次数的问题.html
@@ -30,7 +30,7 @@
         // 这种状态形式
         changeWeather = () => {
             // 获取原来的状态
-            const {isHot} = this.state.isHot
+            const {isHot} = this.state
             this.setState({isHot: !isHot})
         }
 
