--- a/code/12_组件的生命周期/2_react生命周期(旧).html
+++ b/code/12_组件的生命周期/2_react生命周期(旧).html
@@ -17,86 +17,171 @@
 
 <script type="text/babel">
 
-// 定义组件
-class Count extends React.Component {
-
-    // 第一个调用的当然是构造器
-    constructor(props) {
-        console.log("count-constructor");
-        super(props);
-        // 初始化状态
-        this.state = {count: 0}
-        // 这里count 和类名 Count 没关系
-
-    }
-
-    //加1按钮的回调
-    add = () => {
-        // 获取原来的状态
-        const {count} = this.state;
-        // 更新状态
-        this.setState({count: count + 1})
-    };
-
-    // 卸载组件按钮的回调
-    death = () => {
-        ReactDOM.unmountComponentAtNode(document.getElementById("test"))
-    };
-    // 强制组件按钮的回调
-    force = () => {
-        this.forceUpdate();
-        // 阀门关了也能更新
-    };
-
-
-
-    // 组件将要挂载的钩子
-    componentWillMount() {
-        console.log("componentWillMount");
-    }
-
-    // 组件挂载完毕的钩子
-    componentDidMount() {
-        console.log("componentDitMount")
-    }
 
     /*
-    * 你如果不写,底层默认帮你返回一个true,如果您i要是自己写,一定要返回布尔
+    *
+    *
+    * 1. 初始化阶段: 由ReactDOM.render()触发---初次渲染
+            1. constructor()
+            2. getDerivedStateFromProps
+            3. render()
+            4. componentDidMount()
+        2. 更新阶段: 由组件内部this.setSate()或父组件重新render触发
+            1. getDerivedStateFromProps
+            2. shouldComponentUpdate()
+            3. render()
+            4. getSnapshotBeforeUpdate
+            5. componentDidUpdate()
+        3. 卸载组件: 由ReactDOM.unmountComponentAtNode()触发
+            1. componentWillUnmount()
+    *
     * */
+    // 定义组件
+    class Count extends React.Component {
 
-    // 控制组件更新的阀门
-    shouldComponentUpdate() {
-        console.log("shouldComponentUpdate");
-        // 这里 必须要返回一个 布尔值
-        return true;    // 返回true 就能正常走
-        // return false;   // 返回 f 就凉了
+        // 第一个调用的当然是构造器
+        constructor(props) {
+            console.log("count-constructor");
+            super(props);
+            // 初始化状态
+            this.state = {count: 0}
+            // 这里count 和类名 Count 没关系
+
+        }
+
+        //加1按钮的回调
+        add = () => {
+            // 获取原来的状态
+            const {count} = this.state;
+            // 更新状态
+            this.setState({count: count + 1})
+        };
+
+        // 卸载组件按钮的回调
+        death = () => {
+            ReactDOM.unmountComponentAtNode(document.getElementById("test"))
+        };
+        // 强制组件按钮的回调
+        force = () => {
+            this.forceUpdate();
+            // 阀门关了也能更新
+        };
+
+
+        // 组件将要挂载的钩子
+        componentWillMount() {
+            console.log("componentWillMount");
+        }
+
+        // 组件挂载完毕的钩子
+        componentDidMount() {
+            console.log("componentDitMount")
+        }
+
+        /*
+        * 你如果不写,底层默认帮你返回一个true,如果您i要是自己写,一定要返回布尔
+        * */
+
+        // 控制组件更新的阀门
+        shouldComponentUpdate() {
+            console.log("shouldComponentUpdate");
+            // 这里 必须要返回一个 布尔值
+            return true;    // 返回true 就能正常走
+            // return false;   // 返回 f 就凉了
+        }
+
+        // 组件将要更新的钩子
+        componentWillUpdate() {
+            console.log("componentWillUpdate");
+        }
+
+        // 组件将要更新的钩子
+        componentDidUpdate() {
+            console.log("componentDidUpdate");
+        }
+
+        render() {
+            console.log("render")
+            const {count} = this.state;
+            return (
+                <div>
+                    <h2>当前求和为:{count}</h2>
+                    <button onClick={this.add}>点我+1</button>
+                    <button onClick={this.death}>西在</button>
+                    <button onClick={this.force}>强制</button>
+                </div>
+            )
+        }
     }
 
-    // 组件将要更新的钩子
-    componentWillUpdate() {
-        console.log("componentWillUpdate");
-    }
-    // 组件将要更新的钩子
-    componentDidUpdate() {
-        console.log("componentDidUpdate");
+    // 父组件A
+    class A extends React.Component {
+        // 存储骑车的名字
+        // 初始化状态
+        state = {carName: 'BMW'}
+        changeCar = () => {
+            // 更新车你的信息
+            this.setState({carName: "奥迪"})
+        };
+
+        render() {
+            return (
+                <div>
+                    <div>我是A组件</div>
+                    <button onClick={this.changeCar}>换车</button>
+                    {/*然后B组件来展示这个骑车的信息*/}
+                    <B carName={this.state.carName}/>
+                </div>
+            )
+        }
     }
 
-    render() {
-        console.log("render")
-        const {count} = this.state;
-        return (
-            <div>
-                <h2>当前求和为:{count}</h2>
-                <button onClick={this.add}>点我+1</button>
-                <button onClick={this.death}>西在</button>
-                <button onClick={this.force}>强制</button>
-            </div>
-        )
-    }
-}
+    // 子组件B
+    class B extends React.Component {
+        // 这个有瑕疵
+        /*
+        * 有人建议他改成 componentWillReceiveNewProps
+        * 以为 组件将要接收新的 props ,一开始第一次传的不算
+        * 但是我这边我还是调用了
+        * */
 
-//渲染组件
-ReactDOM.render(<Count/>, document.getElementById('test'))
+        // 所以应该叫做: 组件将要接收新的props的钩子
+        componentWillReceiveProps(props) {
+            console.log("componentWillReceiveProps", props);
+        }
+
+
+        // 控制组件更新的阀门
+        shouldComponentUpdate() {
+            console.log("shouldComponentUpdate");
+            // 这里 必须要返回一个 布尔值
+            return true;    // 返回true 就能正常走
+            // return false;   // 返回 f 就凉了
+        }
+
+        // 组件将要更新的钩子
+        componentWillUpdate() {
+            console.log("componentWillUpdate");
+        }
+
+        // 组件将要更新的钩子
+        componentDidUpdate() {
+            console.log("componentDidUpdate");
+        }
+
+        render() {
+             console.log("render");
+            return (
+                <div>
+                    我是B组件,接收到的车是:{this.props.carName}
+                </div>
+            )
+        }
+    }
+
+    // A是父组件 B是子组件
+    //渲染组件
+    ReactDOM.render(<A/>, document.getElementById('test'))
 </script>
 </body>
 </html>
