--- a/code/12_组件的生命周期/3_react生命周期(新).html
+++ b/code/12_组件的生命周期/3_react生命周期(新).html
@@ -1,115 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>3_react生命周期(新)</title>
+    <meta charset="UTF-8">
+    <title>3_react生命周期(新).html(旧)</title>
 </head>
 <body>
-	<!-- 准备好一个“容器” -->
-	<div id="test"></div>
-	
-	<!-- 引入react核心库 -->
-	<script type="text/javascript" src="../js/17.0.1/react.development.js"></script>
-	<!-- 引入react-dom，用于支持react操作DOM -->
-	<script type="text/javascript" src="../js/17.0.1/react-dom.development.js"></script>
-	<!-- 引入babel，用于将jsx转为js -->
-	<script type="text/javascript" src="../js/17.0.1/babel.min.js"></script>
+<!-- 准备好一个“容器” -->
+<div id="test"></div>
 
-	<script type="text/babel">
-		//创建组件
-		class Count extends React.Component{
-			/* 
-				1. 初始化阶段: 由ReactDOM.render()触发---初次渲染
-								1.	constructor()
-								2.	getDerivedStateFromProps 
-								3.	render()
-								4.	componentDidMount() =====> 常用
-											一般在这个钩子中做一些初始化的事，例如：开启定时器、发送网络请求、订阅消息
-				2. 更新阶段: 由组件内部this.setSate()或父组件重新render触发
-								1.	getDerivedStateFromProps
-								2.	shouldComponentUpdate()
-								3.	render()
-								4.	getSnapshotBeforeUpdate
-								5.	componentDidUpdate()
-				3. 卸载组件: 由ReactDOM.unmountComponentAtNode()触发
-								1.	componentWillUnmount()  =====> 常用
-											一般在这个钩子中做一些收尾的事，例如：关闭定时器、取消订阅消息
-			*/
-			//构造器
-			constructor(props){
-				console.log('Count---constructor');
-				super(props)
-				//初始化状态
-				this.state = {count:0}
-			}
+<!-- 引入react核心库 -->
+<script type="text/javascript" src="../js/17.0.1/react.development.js"></script>
+<!-- 引入react-dom，用于支持react操作DOM -->
+<script type="text/javascript" src="../js/17.0.1/react-dom.development.js"></script>
+<!-- 引入babel，用于将jsx转为js -->
+<script type="text/javascript" src="../js/17.0.1/babel.min.js"></script>
 
-			//加1按钮的回调
-			add = ()=>{
-				//获取原状态
-				const {count} = this.state
-				//更新状态
-				this.setState({count:count+1})
-			}
+<script type="text/babel">
 
-			//卸载组件按钮的回调
-			death = ()=>{
-				ReactDOM.unmountComponentAtNode(document.getElementById('test'))
-			}
+    // 定义组件
+    class Count extends React.Component {
+        // 第一个调用的当然是构造器
+        constructor(props) {
+            console.log("count-constructor");
+            super(props);
+            // 初始化状态
+            this.state = {count: 0}
+            // 这里count 和类名 Count 没关系
+        }
 
-			//强制更新按钮的回调
-			force = ()=>{
-				this.forceUpdate()
-			}
-			
-			//若state的值在任何时候都取决于props，那么可以使用getDerivedStateFromProps
-			static getDerivedStateFromProps(props,state){
-				console.log('getDerivedStateFromProps',props,state);
-				return null
-			}
+        //加1按钮的回调
+        add = () => {
+            // 获取原来的状态
+            const {count} = this.state;
+            // 更新状态
+            this.setState({count: count + 1})
+        };
 
-			//在更新之前获取快照
-			getSnapshotBeforeUpdate(){
-				console.log('getSnapshotBeforeUpdate');
-				return 'atguigu'
-			}
+        // 卸载组件按钮的回调
+        death = () => {
+            ReactDOM.unmountComponentAtNode(document.getElementById("test"))
+        };
+        // 强制组件按钮的回调
+        force = () => {
+            this.forceUpdate();
+            // 阀门关了也能更新
+        };
 
-			//组件挂载完毕的钩子
-			componentDidMount(){
-				console.log('Count---componentDidMount');
-			}
 
-			//组件将要卸载的钩子
-			componentWillUnmount(){
-				console.log('Count---componentWillUnmount');
-			}
+        // 组件将要挂载的钩子
+        componentWillMount() {
+            console.log("componentWillMount");
+        }
 
-			//控制组件更新的“阀门”
-			shouldComponentUpdate(){
-				console.log('Count---shouldComponentUpdate');
-				return true
-			}
+        // 组件挂载完毕的钩子
+        componentDidMount() {
+            console.log("componentDitMount")
+        }
 
-			//组件更新完毕的钩子
-			componentDidUpdate(preProps,preState,snapshotValue){
-				console.log('Count---componentDidUpdate',preProps,preState,snapshotValue);
-			}
-			
-			render(){
-				console.log('Count---render');
-				const {count} = this.state
-				return(
-					<div>
-						<h2>当前求和为：{count}</h2>
-						<button onClick={this.add}>点我+1</button>
-						<button onClick={this.death}>卸载组件</button>
-						<button onClick={this.force}>不更改任何状态中的数据，强制更新一下</button>
-					</div>
-				)
-			}
-		}
-		
-		//渲染组件
-		ReactDOM.render(<Count count={199}/>,document.getElementById('test'))
-	</script>
+        /*
+        * 你如果不写,底层默认帮你返回一个true,如果您i要是自己写,一定要返回布尔
+        * */
+
+        // 控制组件更新的阀门
+        shouldComponentUpdate() {
+            console.log("shouldComponentUpdate");
+            // 这里 必须要返回一个 布尔值
+            return true;    // 返回true 就能正常走
+            // return false;   // 返回 f 就凉了
+        }
+
+        // 组件将要更新的钩子
+        componentWillUpdate() {
+            console.log("componentWillUpdate");
+        }
+
+        // 组件将要更新的钩子
+        componentDidUpdate() {
+            console.log("componentDidUpdate");
+        }
+
+        render() {
+            console.log("render")
+            const {count} = this.state;
+            return (
+                <div>
+                    <h2>当前求和为:{count}</h2>
+                    <button onClick={this.add}>点我+1</button>
+                    <button onClick={this.death}>西在</button>
+                    <button onClick={this.force}>强制</button>
+                </div>
+            )
+        }
+    }
+
+    // 父组件A
+    class A extends React.Component {
+        // 存储骑车的名字
+        // 初始化状态
+        state = {carName: 'BMW'}
+        changeCar = () => {
+            // 更新车你的信息
+            this.setState({carName: "奥迪"})
+        };
+
+        render() {
+            return (
+                <div>
+                    <div>我是A组件</div>
+                    <button onClick={this.changeCar}>换车</button>
+                    {/*然后B组件来展示这个骑车的信息*/}
+                    <B carName={this.state.carName}/>
+                </div>
+            )
+        }
+    }
+
+    // 子组件B
+    class B extends React.Component {
+
+        componentWillReceiveProps(props) {
+            console.log("componentWillReceiveProps", props);
+        }
+
+
+
+        render() {
+             console.log("render");
+            return (
+                <div>
+                    我是B组件,接收到的车是:{this.props.carName}
+                </div>
+            )
+        }
+    }
+
+    // A是父组件 B是子组件
+    //渲染组件
+    ReactDOM.render(<Count/>, document.getElementById('test'))
+</script>
 </body>
 </html>
