--- a/code/12_组件的生命周期/3_react生命周期(新).html
+++ b/code/12_组件的生命周期/3_react生命周期(新).html
@@ -8,11 +8,11 @@
 <!-- 准备好一个“容器” -->
 <div id="test"></div>
 
-<!-- 引入react核心库 -->
+<!-- 引入新版react核心库 -->
 <script type="text/javascript" src="../js/17.0.1/react.development.js"></script>
-<!-- 引入react-dom，用于支持react操作DOM -->
+<!-- 引入新版react-dom，用于支持react操作DOM -->
 <script type="text/javascript" src="../js/17.0.1/react-dom.development.js"></script>
-<!-- 引入babel，用于将jsx转为js -->
+<!-- 引入新版babel，用于将jsx转为js -->
 <script type="text/javascript" src="../js/17.0.1/babel.min.js"></script>
 
 <script type="text/babel">
@@ -45,7 +45,6 @@
             this.forceUpdate();
             // 阀门关了也能更新
         };
-
 
         // 组件将要挂载的钩子
         componentWillMount() {
